--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "classnames": "^2.5.1",
+    "keen-slider": "^6.8.6",
     "next": "^15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
